--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <div class="container">
         <h1>Portal GameGear</h1>
             <nav>
                 <ul>
@@ -19,67 +20,87 @@
                     </li>
                 </ul>
             </nav>
+        </div>
     </header>
-    <section>
+    <section id="Noticias">
+       <div class="container">
         <h2>Noticias</h2>
-        <article>
-            <img src="./imagens/R.png" alt="Logo gta6" width="480" height="320">
-            <header>
-                <time>28/12/2023 às 14:20</time>
-            </header>
-            <h3>O que esperar de gta 6</h3>
-            <p>
-                Gta 6 um grande classico retorna com um trailer amocionante e de tirar o flolego, o que devemos esperar destre proximo grande jogo da rockstar games?
-            </p>
-            <a href="#" title="leia a noticia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./imagens/OIP.jpeg" alt="Baldurs fate 3 G.O.T.Y" width="480" height="320">
-            <header>
-                <time>28/12/2023 às 14:05</time>
-            </header>
-            <h3>Baldurs gate 3 G.O.T.Y de 2023</h3>
-            <p>
-                Baldur gate 3 um dos rpg mais revolucionarios no quesito de escolha e liberdade o seu jogador ganha jogo do ano!
-            </p>
-            <a href="#" title="leia a noticia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./imagens/mario.jpeg" alt="Filme mario" width="480" height="320">
-            <header>
-                <time>28/12/2023 às 13:50</time>
-            </header>
-            <h3>O filmme com a segunda maior bilheteria do ano</h3>
-            <p>
-                o segundo filme com a maior bilheteria do ano acabou sendo a adptação de um game mundiamente famoso, perdendo apenas para Barbie.
-            </p>
-            <a href="#" title="leia a noticia completa">Ler mais</a>
-        </article>
+        <div class="articles">
+            <article>
+                <img src="./imagens/R.png" alt="Logo gta6">
+                <header>
+                    <time class="creation-date">28/12/2023 às 14:20</time>
+                </header>
+                <h3>O que esperar de gta 6</h3>
+                <p>
+                    Gta 6 um grande classico retorna com um trailer amocionante e de tirar o flolego, o que devemos esperar destre proximo grande jogo da rockstar games?
+                </p>
+                <a href="#" title="leia a noticia completa">Ler mais</a>
+            </article>
+            <article>
+                <img src="./imagens/OIP.jpeg" alt="Baldurs fate 3 G.O.T.Y">
+                <header>
+                    <time class="creation-date">28/12/2023 às 14:05</time>
+                </header>
+                <h3>Baldurs gate 3 G.O.T.Y de 2023</h3>
+                <p>
+                    Baldur gate 3 um dos rpg mais revolucionarios no quesito de escolha e liberdade o seu jogador ganha jogo do ano!
+                </p>
+                <a href="#" title="leia a noticia completa">Ler mais</a>
+            </article>
+            <article>
+                <img src="./imagens/mario.jpeg" alt="Filme mario">
+                <header>
+                    <time class="creation-date">28/12/2023 às 13:50</time>
+                </header>
+                <h3>O filmme com a segunda maior bilheteria do ano</h3>
+                <p>
+                    o segundo filme com a maior bilheteria do ano acabou sendo a adptação de um game mundiamente famoso, perdendo apenas para Barbie.
+                </p>
+                <a href="#" title="leia a noticia completa">Ler mais</a>
+            </article>
+            <article>
+                <img src="./imagens/mario.jpeg" alt="Filme mario">
+                <header>
+                    <time class="creation-date">28/12/2023 às 13:50</time>
+                </header>
+                <h3>O filmme com a segunda maior bilheteria do ano</h3>
+                <p>
+                    o segundo filme com a maior bilheteria do ano acabou sendo a adptação de um game mundiamente famoso, perdendo apenas para Barbie.
+                </p>
+                <a href="#" title="leia a noticia completa">Ler mais</a>
+            </article>
+        </div>
+       </div>
     </section>
-    <section>
-        <h2>Revews</h2>
-        <article>
-            <img src="./imagens/psychonauts-----46378.jpg" alt="revew psychonauts" width="320" height="480">
-            <header>
-                <time>19/11/2023 às 21:55</time>
-            </header>
-            <h3>psychonauts</h3>
-            <p>
-                Estou a mais de um ano para zerar esse game, mas finalmente consegui, depois de tanto tempo...             
-            </p>
-            <a href="#" title="leia a noticia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./imagens/Uncharted 4.png" alt="revew Uncharted 4" width="480" height="320">
-            <header>
-                <time>21/09/2023 às 08:07</time>
-            </header>
-            <h3>Uncharted 4</h3>
-            <p>
-                Jogo me pegou de surpresa com o enceramento da saga de Natan Drake, tenho muitas coisas a dizer do game mas vou me abster com poucas isso sendo sua historia que e decente, digna de um filme de seção da tarde...
-            </p>
-            <a href="#" title="leia a noticia completa">Ler mais</a>
-        </article>
+    <section id="revews">
+        <div class="container">
+            <h2>Revews</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/kena.png" alt="revew kena bridge of spirits">
+                    <header>
+                        <time class="creation-date">19/11/2023 às 21:55</time>
+                    </header>
+                    <h3>kena bridge of spirits </h3>
+                    <p>
+                        Bem esse e um jogo que já está na minha listinha pra zerar a bastante tempo, como o game nunca entrava em promoção tive que esperar entrar, mas quando comprei e joguei, nosso, que jogo lindo, senário cativante, trilha sonora linda e uma história triste e emocionante.              
+                    </p>
+                    <a href="#" title="leia a noticia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/Uncharted 4.png" alt="revew Uncharted 4">
+                    <header>
+                        <time class="creation-date">21/09/2023 às 08:07</time>
+                    </header>
+                    <h3>Uncharted 4</h3>
+                    <p>
+                        Jogo me pegou de surpresa com o enceramento da saga de Natan Drake, tenho muitas coisas a dizer do game mas vou me abster com poucas isso sendo sua historia que e decente, digna de um filme de seção da tarde...
+                    </p>
+                    <a href="#" title="leia a noticia completa">Ler mais</a>
+            </article>
+            </div>
+        </div>
     </section>
 </body>
 </html>
