Termianando exercicio e mudando a branch
Termianando exercicio e mudando a branch

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#" title="ir para a secão de  noticias">Noticias</a>
+                        <a href="#Noticias" title="ir para a secão de  noticias">Noticias</a>
                     </li>
                     <li>
-                        <a href="#" title="ir para a secão de revew de Games">Revews</a>
+                        <a href="#reviews" title="ir para a secão de revew de Games">Revews</a>
+                    </li>
+                    <li>
+                        <a href="#E-sports" title="ir para a secão de E-sports">E-sports</a>
+                    </li>
+                    <li>
+                        <a href="#Lancamentos" title="ir para a secão de Lancamentos">Lancamentos</a>
                     </li>
                 </ul>
             </nav>
@@ -59,21 +65,11 @@
                 </p>
                 <a href="#" title="leia a noticia completa">Ler mais</a>
             </article>
-            <article>
-                <img src="./imagens/mario.jpeg" alt="Filme mario">
-                <header>
-                    <time class="creation-date">28/12/2023 às 13:50</time>
-                </header>
-                <h3>O filmme com a segunda maior bilheteria do ano</h3>
-                <p>
-                    o segundo filme com a maior bilheteria do ano acabou sendo a adptação de um game mundiamente famoso, perdendo apenas para Barbie.
-                </p>
-                <a href="#" title="leia a noticia completa">Ler mais</a>
             </article>
         </div>
        </div>
     </section>
-    <section id="revews">
+    <section id="reviews">
         <div class="container">
             <h2>Revews</h2>
             <div class="articles">
@@ -99,6 +95,71 @@
                     </p>
                     <a href="#" title="leia a noticia completa">Ler mais</a>
             </article>
+            </div>
+        </div>
+    </section>
+    <section id="E-sports">
+        <div class="container">
+            <h2>E-sports</h2>
+            <div class="articles">
+                <article>
+                    <img src="/imagens/vavab9.webp" alt="Valorant mobile">
+                    <header>
+                        <time class="creation-date">02/12/2024 às 09:41</time>
+                    </header>
+                    <h3>Valorant ganha beta em mobile</h3>
+                    <p>
+                        O mundiamente famoso jogo valorant chega a plataforma mobile com um beta fechado, esta sendo estipulado que ate meados de 2025 o jogo chege ao mibile totalmente finalizado.
+                    </p>
+                    <a href="#" title="leia a noticia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/levitian-valorant-teams.webp" alt="aspas e anunciado pela Leviatan">
+                    <header>
+                        <time class="creation-date">20/12/2023 às 10:03 </time>
+                    </header>
+                    <h3>Aspas é anunciado pela Leviatán</h3>
+                    <p>
+                        Erick "aspas" está oficialmente anunciado pela Leviatán. O jogador brasileiro, que se destacou nas temporadas 2022 e 2023 do Valorant pela LOUD, passa a defender a equipe latino-americana.
+                    </p>
+                    <a href="#" title="leia a noticia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/LoL-A-historia-da-paiN-Gaming-a-maior-organizacao-de-eSports-do-pais.png" alt="anuncio pain gaming">
+                    <time class="creation-date"> 30/12/2023 às 15:23</time>
+                    <h3>CBLOL | PaiN Gaming anuncia Titan e Kuri no elenco de 2024</h3>
+                    <p>
+                        A paiN Gaming anunciou nesta terça-feira (19) a chegada de Alexandre “Titan” e Won-yeong “Kuri” na line up de League of Legends para disputar o Campeonato Brasileiro de League of Legends (CBLOL) em 2024. A organização agora tem sua formação oficial confirmada para o campeonato: além das duas novas adições, Matheus “dyNquedo”, Marcos “Cariok” e Eui-seok “Wizer” se mantêm no time.
+                    </p>
+                    <a href="#" title="leia a noticia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="Lancamentos">
+        <div class="container">
+            <H2>Lançamentos</H2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/og_img.jpg" alt="Like a Dragon: Infinite Wealth">
+                    <header>
+                        <time class="creation-date">01/01/2024 às 10:25</time>
+                    </header>
+                    <h3>Like a Dragon: Infinite Wealth</h3>
+                    <p>
+                        O jogo mais ambicioso da cultuada franquia de RPG da Sega, Like a Dragon: Infinite Wealth é um dos jogos mais esperados de 2024 e chega já no final de janeiro. Explore o Japão e tudo que o Havaí tem a oferecer em uma aventura tão expansiva que abrange todo o Oceano Pacífico.
+                    </p>
+                    <a href="#" title="leia a noticia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/EGST_StoreLandscape_2560x1440_2560x1440-d49d4862a0e1a243638d5f95517ed205.jpeg" alt="Prince of Persia: The Lost Crown">
+                    <header class="creation-date">01/01/2024 às 10:50</header>
+                    <h3>Prince of Persia: The Lost Crown</h3>
+                    <p>
+                        Viaje para um empolgante jogo de plataforma de aventura e ação no mundo mitológico persa, onde os limites do tempo e do espaço são seus para manipular. Jogue como Sargon e evolua de espadachim prodígio para uma lenda extraordinária enquanto domina o combate acrobático e desbloqueia novos Poderes Temporais e super-habilidades exclusivas.
+                    </p>
+                    <a href="#" title="leia a noticia completa">Ler mais</a>
+                </article>
             </div>
         </div>
     </section>
